# notification_sender

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt  settings.toml
migrations/versions/: 5858e5570fe7_message_channels_column_address_not_.py  688c10b1d006_rename_table_senders.py  a81d9e8ea1ab_.py  e5936aeabbfa_message_channels_create_address_column.py
notification_sender/: __init__.py  app.py  helper.py  models.py  repository.py  services.py  vo.py
notification_sender/api/: omnichannel.py  resources.py  swagger.yaml
notification_sender/ext/: commands.py
tests/: conftest.py  test_repository.py  test_resources.py  test_services.py  test_vo.py
