[tool.poetry]
name = "notification_sender"
version = "0.1.0"
description = ""
authors = ["vitorroxo <vitor@mobi2buy.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
dynaconf = "^2.2.3"
requests = "^2.23.0"
connexion = {version = "^2.6.0", extras = ["swagger-ui"]}
pika = "^1.1.0"
pytest-mock = "^3.1.0"
flask-migrate = "^2.5.3"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
